fix styling for forms being too small

--- a/app/assets/stylesheets/revised/_fill_in_form.scss
+++ b/app/assets/stylesheets/revised/_fill_in_form.scss
@@ -1,5 +1,5 @@
 form.fill_in {
-  width: 40%;
+  width: 60%;
   margin: 0 auto;
   background-color: rgba(147, 128, 108, 0.1);
   padding: 1rem;
